2008-07-30  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/lirc/totem-lirc.c (impl_activate): Also fail to load
	if we're missing a data file

2008-07-30  Bastien Nocera  <hadess@hadess.net>

	* data/lirc_example:
	* src/plugins/lirc/Makefile.am:
	* src/plugins/lirc/totem-lirc.c (impl_activate):
	* src/plugins/lirc/totem_lirc_default: Update lirc plugin
	to read from a default configuration file, and not fail when there's
	no user configuration. This allows Totem to work out-of-the-box on the
	majority of remotes as setup by gnome-lirc-properties

2008-07-30  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/plugins/pythonconsole/Makefile.am:
	* src/plugins/pythonconsole/console.py:
	* src/plugins/pythonconsole/pythonconsole.py:
	* src/plugins/pythonconsole/pythonconsole.totem-plugin.in:
	* totem.spec.in: Patch from Andrés de Barbará <adebarbara@gmail.com>
	to add a Python console to Totem (Closes: #542470)

2008-07-29  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am:
	* src/totem-dvb-setup.c (totem_dvb_setup_helper),
	(child_watch_func), (totem_dvb_setup_device):
	* src/totem-dvb-setup.h:
	* src/totem.c (totem_dvb_setup_result), (totem_action_load_media):
	Add support for a helper script in $(libexecdir)/totem-dvb-scanner
	that would scan for channels on the specified adapter when loading
	the channels list fails

2008-07-29  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/thumbnail/totem-thumbnail.c (update_from_state):
	Look for the thumbnail in the normal and large thumbnails, not
	twice in the normal ones, spotted by Robin Stocker <robin@nibor.org>

2008-07-23  Bastien Nocera  <hadess@hadess.net>

	* data/totem.ui: Fix mnemonics overlap between Sidebar button
	and Sound menu (Closes: #522275)

2008-07-17  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_realize), (bacon_video_widget_set_zoom):
	Apply the zoom level even if there's no stream yet